GSLT/src/test/module/bad/BadBindOOB.module
Module BadBindOOB {
  Theory Bad() {
    Nil
      Exports { Proc; Name; }
      Terms {
        PRecv . Proc ::= "for" "(" (Bind Name [3]) "<-" Name ")" "{" Proc "}" ;
      }
  }
}